--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "froala-audio": "^1.0.3",
         "vue": "^2.5.0",
         "vue-froala-wysiwyg": "^2.9.0"
     }
